# python-scraper

./: .replit  file.py  main.py  pyproject.toml
extractors/: indeed.py  wwr.py
templates/: home.html  search.html
