[tool.poetry]
name = "python-scraper-"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"
packages = [{include = "python_scraper_"}]

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "0.0.1"
beautifulsoup4 = "4.12.2"
requests = "2.31.0"
selenium = "4.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
